<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">无忧火车票</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">无忧火车票</string>
    <string name="login_name">请输入用户名</string>
    <string name="login_pass">请输入密码</string>
    <string name="login_rangcode">请输入验证码</string>
    <string name="login_button">登 录</string>
    <string name="selectAccount">选择账号</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_user">MainActivity</string>
    <string name="user_main">登录成功!</string>
    <string name="buy_ticket">买票</string>
    <string name="rob_ticket">抢票</string>
    <string name="see_order">订单</string>
    <string name="about">关于</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_world1">Hello world1!</string>
    <string name="hello_world2">Hello world2!</string>
    <string name="hello_world3">Hello world3!</string>
    <string name="hello_world4">Hello world4!</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_info1">Info1Activity</string>
    <string name="title_activity_info2">Info2Activity</string>
    <string name="title_activity_info3">Info3Activity</string>
    <string name="title_activity_info4">Info4Activity</string>
    <string name="title_activity_action_bar">ActionBarActivity</string>
    <string name="startArea">出发地拼音首字母</string>
    <string name="endArea">目的地拼音首字母</string>
    <string name="startDate">出发日期</string>
    <string name="startTime">出发时间</string>
    <string name="startTrainNo">出发车次</string>
    <string name="all">全部</string>
    <string name="dc">动车</string>
    <string name="zt">Z字头</string>
    <string name="tt">T字头</string>
    <string name="kt">K字头</string>
    <string name="other">其它</string>
    <string name="select">选择</string>
    <string name="action_bar_search">搜索</string>
    <string name="action_bar_add">增加</string>
    <string name="action_bar_edit">编辑</string>
    <string name="action_bar_share">分享</string>
	<string name="action_bar_sort">排序</string>
	<string name="action_bar_sort_size">排序大小</string>
	<string name="action_bar_sort_alpha">透明度</string>
	<string name="first_seat">一等座</string>
	<string name="second_seat">二等座</string>
	<string name="hard_sleeper">硬 卧</string>
	<string name="hard_seat">硬 座</string>
	<string name="no_seat">无 座</string>
	<string name="selectPeople">乘客</string>
	<string name="selectOrder">坐席</string>
	<string name="selectTime">时间段</string>
	<string name="selectTrainType">车次类型</string>
	<string name="orderPeople">订票乘客</string>
	<string name="peopleSeat">乘客坐席</string>
	<string name="peopleTime">时间段</string>
	<string name="orderCode">验证码</string>
	<string name="beginOrder">开始抢票</string>
	<string name="syncUser">同步联系人</string>
	<string name="trainInfo">车次信息</string>
	<string name="seatInfo">座位信息</string>
	<string name="passengersInfo">旅客信息</string>
	<string name="statusInfo">车票状态</string>
	<string name="orderTimeSearch">按订票日期查询</string>
	<string name="takeTrainTimeSearch">按乘车日期查询</string>
	<string name="beginTimeSearch">起始日期</string>
	<string name="endTimeSearch">结束日期</string>
	<string name="orderNoSearch">订单号</string>
	<string name="trainNoSearch">车次</string>
	<string name="passengersNameSearch">订单号/车次/乘客姓名</string>
	<string name="search">查    询</string>
	<string name="refundButton">退票</string>
	<string name="payButton">付款</string>
	<string name="lastTime">剩余时间</string>
	<string name="desc">描述</string>
	<string name="skip">跳  过</string>
</resources>