<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/focusableLayout"
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <CheckBox
        android:id="@+id/orderTimeCheckBox"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:checked="true"
        android:text="@string/orderTimeSearch" />

    <CheckBox
        android:id="@+id/takeTrainTimeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/orderTimeText"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/orderTimeCheckBox"
        android:text="@string/takeTrainTimeSearch" />

    <EditText
        android:id="@+id/orderTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/orderTimeCheckBox"
        android:layout_below="@+id/orderTimeCheckBox"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/beginTimeSearch"
        android:inputType="date" />

    <EditText
        android:id="@+id/endTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/orderTimeText"
        android:layout_alignBottom="@+id/orderTimeText"
        android:layout_alignLeft="@+id/takeTrainTimeCheckBox"
        android:layout_alignRight="@+id/takeTrainTimeCheckBox"
        android:ems="10"
        android:hint="@string/endTimeSearch"
        android:inputType="date" >
    </EditText>

    <EditText
        android:id="@+id/passengersNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/orderTimeText"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/passengersNameSearch"
        android:inputType="text" />

    <Button
        android:id="@+id/orderSearch"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@+id/passengersNameText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:text="@string/search" />

</RelativeLayout>